syntax = "proto3";

message Request {
  string id = 1;
  string mode = 2;
  int32 count = 3;
}

message Response {
  string id = 1;
  int32 count = 2;
}

service TestService {
  rpc unaryCall(Request) returns (Response) {}
  rpc streamResponse(Request) returns (stream Response) {}
  rpc streamRequest(stream Request) returns (Response) {}
  rpc streamBidi(stream Request) returns (stream Response) {}
}
